policies/components/other/require-ephemeral-storage-sizelimit/require-ephemeral-storage-sizelimit.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ibm-require-ephemeral-storage-sizelimit
  annotations:
    policies.kyverno.io/title: Require Ephemeral Storage sizeLimit
    policies.kyverno.io/category: IBM - Other
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/description: >-
      Ephemeral storage volumes (emptyDir) can consume unbounded storage resources if not properly
      configured with a sizeLimit. This can lead to node disk pressure and potential pod evictions.
      This policy requires that all emptyDir volumes define a sizeLimit to ensure proper resource
      management and prevent storage exhaustion on cluster nodes.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: validate-ephemeral-storage-sizelimit
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaceSelector:
                matchExpressions:
                  - key: ibm.com/kyverno
                    operator: Exists
      # Documentation shows that there is no way to define sizeLimit for the emptyDir created by builder:
      # https://docs.openshift.com/container-platform/latest/rest_api/workloads_apis/buildconfig-build-openshift-io-v1.html
      exclude:
        any:
          - resources:
              kinds:
                - Pod
              selector:
                matchExpressions:
                  - key: "openshift.io/build.name"
                    operator: Exists
      validate:
        message: "All emptyDir volumes must define a sizeLimit to prevent unbounded storage consumption."
        deny:
          conditions:
            any:
              # We pass 'istio-envoy', 'istio-data', 'workload-socket', 'credential-socket' and 'workload-certs' volumes,
              # they are unbounded storage volumes created for istio proxy containers.
              - key: "{{ request.object.spec.volumes[?type(@) == 'object' && emptyDir != null && emptyDir.sizeLimit == null && !contains(['istio-envoy', 'istio-data', 'workload-socket', 'credential-socket', 'workload-certs'], name)] | length(@) }}"
                operator: GreaterThan
                value: 0
